[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quepp"
version = "0.1.0"
description = "Research-oriented local implementation of Quantum Enhanced Pauli Propagation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "qiskit>=2.2",
]

[tool.setuptools.packages.find]
include = ["quepp*"]

